Adapt subscription setting. (#75)